--- a/styles/main.css
+++ b/styles/main.css
@@ -61,3 +61,9 @@ textarea{
     font:500 1.6rem Poppins;
     color: var(--color-text-base);
 }
+
+@media(min-width: 700px){
+    :root{
+        font-size: 62.5%;
+    }
+}
