--- a/styles/main.css
+++ b/styles/main.css
@@ -43,6 +43,7 @@ html,body{
 body{
     background-color: var(--color-background);
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
